fixtures/frontend/milestone-2/invalid/source-option-type-mismatch/main.aivi
domain Duration over Int
    literal s : Int -> Duration

@source timer.every 120 with {
    immediate: 1,
    jitter: 1
}
sig tick : Signal Unit
